--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+		'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	min-height: 100vh;
+	min-width: 100vw;
+	overflow-y: hidden;
+	position: fixed;
+	top: 0;
+}
+
+a {
+	text-decoration: none;
+	color: black;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+ul {
+	list-style-type: none;
+}
+
+.nav {
+	display: flex;
+	width: 100vw;
+	justify-content: flex-end;
+	box-sizing: border-box;
+	margin-top: 3vh;
+}
+
+.nav-list {
+	margin: 0 3vh;
+}
+
+.fw-title {
+	position: fixed;
+	top: 0;
+	width: 5vw;
+	margin: 3vh;
+}
+
+.page-title {
+	position: fixed;
+	font-size: 14.375em;
+	opacity: 0.5;
+	left: 50vw;
+	z-index: -1;
+	height: 100vh;
+	width: 100%;
+	top: 0;
+	display: flex;
+	align-items: center;
+}
+
+.drop-shadow {
+	box-shadow: 12px 9px 25px rgba(0, 0, 0, 0.25);
+}
+
+.end-of-scroll {
+	width: auto;
+	/* word-wrap: break-word; */
+	/* padding: 0 2vh; */
+	/* font-size: 5em; */
+	opacity: 0;
+	box-sizing: border-box;
+	text-align: center;
 }
