--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,7 @@ ul {
 	box-sizing: border-box;
 	text-align: center;
 }
+
+canvas {
+	display: block; /* fix necessary to remove space at bottom of canvas */
+}
