--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,51 @@
 	width: 100%;
 	z-index: 999;
 }
+
+.pointer {
+	cursor: pointer;
+}
+
+.float {
+	animation: float 6s ease-in-out infinite;
+}
+
+.float-slow {
+	animation: float 6.2s ease-in-out infinite;
+}
+
+@-webkit-keyframes float {
+	0% {
+		box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+		-webkit-transform: translatey(0px);
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+		-webkit-transform: translatey(-20px);
+		transform: translatey(-20px);
+	}
+	100% {
+		box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+		-webkit-transform: translatey(0px);
+		transform: translatey(0px);
+	}
+}
+
+@keyframes float {
+	0% {
+		box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+		-webkit-transform: translatey(0px);
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+		-webkit-transform: translatey(-20px);
+		transform: translatey(-20px);
+	}
+	100% {
+		box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+		-webkit-transform: translatey(0px);
+		transform: translatey(0px);
+	}
+}
