--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,21 @@
 	top: 0;
 	height: 100%;
 	width: 100%;
+	z-index: 997;
+}
+
+.z-top {
 	z-index: 999;
+}
+
+.no-select {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently
+									supported by Chrome, Edge, Opera and Firefox */
 }
 
 .pointer {
