--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,13 @@
 	animation: float 6.2s ease-in-out infinite;
 }
 
+.padd-top {
+	padding-top: 10vh;
+	@media (max-width: 768px) {
+		padding-top: 0;
+	}
+}
+
 @-webkit-keyframes float {
 	0% {
 		box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
